[tool.poetry]
name = "study-estrutura-de-dados"
version = "0.1.0"
description = ""
authors = ["Léo Graciano <leonardoferreiragraciano@gmail.com>"]
readme = "README.md"
packages = [{include = "study_estrutura_de_dados"}]

[tool.poetry.dependencies]
python = "3.9.16"
scipy = "^1.10.0"
numpy = "^1.24.1"
matplotlib = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
